
	BOOKKEEPER-469: Remove System.out.println from TestLedgerManager (ivank via fpj)

        BOOKKEEPER-205: implement a MetaStore based ledger manager for bookkeeper client. (jiannan via ivank)

        BOOKKEEPER-426: Make auditor Vote znode store a protobuf containing the host that voted (ivank)

      hedwig-server:

        BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)

        BOOKKEEPER-329: provide stop scripts for hub server (sijie via ivank)

        BOOKKEEPER-331: Let hedwig support returning message seq id for publish requests. (Mridul via sijie)

        BOOKKEEPER-340: Test backward compatibility for hedwig between different versions. (sijie via ivank)

        BOOKKEEPER-283: Improve Hedwig Console to use Hedwig Metadata Manager. (sijie via ivank)

        BOOKKEEPER-332: Add SubscriptionPreferences to record all preferences for a subscription (sijie via ivank)

        BOOKKEEPER-333: server-side message filter (sijie via ivank)

        BOOKKEEPER-252: Hedwig: provide a subscription mode to kill other subscription channel when hedwig client is used as a proxy-style server. (sijie via ivank)

        BOOKKEEPER-397: Make the hedwig client in RegionManager configurable. (Aniruddha via sijie)

        BOOKKEEPER-367: Server-Side Message Delivery Flow Control (sijie via ivank)

        BOOKKEEPER-415: Rename DeliveryThrottle to MessageWindowSize (ivank via sijie)

	BOOKKEEPER-422: Simplify AbstractSubscriptionManager (stu via fpj)

        BOOKKEEPER-435: Create SubscriptionChannelManager to manage all subscription channel (sijie via ivank)

        BOOKKEEPER-411: Add CloseSubscription Request for multiplexing support (sijie via ivank)

        BOOKKEEPER-441: InMemorySubscriptionManager should back up top2sub2seq before change it (Yixue via ivank)

	BOOKKEEPER-479: Fix apache-rat issues in tree (ivank via fpj)
