@@ -32,6 +32,11 @@ import java.util.Set;
 import java.util.SortedMap;
 import java.util.TreeMap;
 
+import org.apache.zookeeper.ZooKeeper;
+import org.apache.bookkeeper.meta.LedgerManagerFactory;
+import org.apache.bookkeeper.meta.LedgerUnderreplicationManager;
+import org.apache.bookkeeper.zookeeper.ZooKeeperWatcherBase;
+
 import org.apache.bookkeeper.bookie.EntryLogger.EntryLogScanner;
 import org.apache.bookkeeper.bookie.Journal.JournalScanner;
 import org.apache.bookkeeper.bookie.Journal.LastLogMark;
@@ -76,6 +81,7 @@ public class BookieShell implements Tool {
     static final String CMD_READLOG = "readlog";
     static final String CMD_READJOURNAL = "readjournal";
     static final String CMD_LASTMARK = "lastmark";
+    static final String CMD_AUTORECOVERY = "autorecovery";
     static final String CMD_HELP = "help";
 
     final ServerConfiguration bkConf = new ServerConfiguration();
@@ -638,6 +644,76 @@ public class BookieShell implements Tool {
         }
     }
 
+    /**
+     * Command for administration of autorecovery
+     */
+    class AutoRecoveryCmd extends MyCommand {
+        Options opts = new Options();
+
+        public AutoRecoveryCmd() {
+            super(CMD_AUTORECOVERY);
+            opts.addOption("e", "enable", false,
+                           "Enable auto recovery of underreplicated ledgers");
+            opts.addOption("d", "disable", false,
+                           "Disable auto recovery of underreplicated ledgers");
+        }
+
+        @Override
+        Options getOptions() {
+            return opts;
+        }
+
+        @Override
+        String getDescription() {
+            return "Enable or disable autorecovery in the cluster.";
+        }
+
+        @Override
+        String getUsage() {
+            return "autorecovery [-enable|-disable]";
+        }
+
+        @Override
+        int runCmd(CommandLine cmdLine) throws Exception {
+            boolean disable = cmdLine.hasOption("d");
+            boolean enable = cmdLine.hasOption("e");
+
+            if ((!disable && !enable)
+                || (enable && disable)) {
+                LOG.error("One and only one of -enable and -disable must be specified");
+                printUsage();
+                return 1;
+            }
+            ZooKeeper zk = null;
+            try {
+                zk = ZooKeeperClient.createConnectedZooKeeperClient(conf.getZkServers(), conf.getZkTimeout());
+                LedgerManagerFactory mFactory = LedgerManagerFactory.newLedgerManagerFactory(bkConf, zk);
+                LedgerUnderreplicationManager underreplicationManager = mFactory.newLedgerUnderreplicationManager();
+                if (enable) {
+                    if (underreplicationManager.isLedgerReplicationEnabled()) {
+                        LOG.warn("Autorecovery already enabled. Doing nothing");
+                    } else {
+                        LOG.info("Enabling autorecovery");
+                        underreplicationManager.enableLedgerReplication();
+                    }
+                } else {
+                    if (!underreplicationManager.isLedgerReplicationEnabled()) {
+                        LOG.warn("Autorecovery already disabled. Doing nothing");
+                    } else {
+                        LOG.info("Disabling autorecovery");
+                        underreplicationManager.disableLedgerReplication();
+                    }
+                }
+            } finally {
+                if (zk != null) {
+                    zk.close();
+                }
+            }
+
+            return 0;
+        }
+    }
+
     final Map<String, Command> commands;
     {
         commands = new HashMap<String, Command>();
@@ -648,6 +724,7 @@ public class BookieShell implements Tool {
         commands.put(CMD_READLOG, new ReadLogCmd());
         commands.put(CMD_READJOURNAL, new ReadJournalCmd());
         commands.put(CMD_LASTMARK, new LastMarkCmd());
+        commands.put(CMD_AUTORECOVERY, new AutoRecoveryCmd());
         commands.put(CMD_HELP, new HelpCmd());
     }
 
@@ -670,9 +747,10 @@ public class BookieShell implements Tool {
         System.err.println("       metaformat   [-nonInteractive] [-force]");
         System.err.println("       bookieformat [-nonInteractive] [-force]");
         System.err.println("       recover      <bookieSrc> [bookieDest]");
-        System.err.println("       ledger      [-meta] <ledger_id>");
-        System.err.println("       readlog     [-msg] <entry_log_id|entry_log_file_name>");
-        System.err.println("       readjournal [-msg] <journal_id|journal_file_name>");
+        System.err.println("       ledger       [-meta] <ledger_id>");
+        System.err.println("       readlog      [-msg] <entry_log_id|entry_log_file_name>");
+        System.err.println("       readjournal  [-msg] <journal_id|journal_file_name>");
+        System.err.println("       autorecovery [-enable|-disable]");
         System.err.println("       lastmark");
         System.err.println("       help");
     }
