@@ -451,14 +451,18 @@ public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationMa
                     + ZkLedgerUnderreplicationManager.DISABLE_NODE, ""
                     .getBytes(UTF_8), Ids.OPEN_ACL_UNSAFE, CreateMode.PERSISTENT);
             LOG.info("Auto ledger re-replication is disabled!");
-        } catch (KeeperException ke) {
-            LOG.error("Exception while stopping replication", ke);
+        } catch (KeeperException.NodeExistsException ke) {
+            LOG.warn("AutoRecovery is already disabled!", ke);
             throw new ReplicationException.UnavailableException(
-                    "Error contacting zookeeper", ke);
+                    "AutoRecovery is already disabled!", ke);
+        } catch (KeeperException ke) {
+            LOG.error("Exception while stopping auto ledger re-replication", ke);
+            throw new ReplicationException.UnavailableException(
+                    "Exception while stopping auto ledger re-replication", ke);
         } catch (InterruptedException ie) {
             Thread.currentThread().interrupt();
             throw new ReplicationException.UnavailableException(
-                    "Interrupted while connecting zookeeper", ie);
+                    "Interrupted while stopping auto ledger re-replication", ie);
         }
     }
 
@@ -470,14 +474,18 @@ public class ZkLedgerUnderreplicationManager implements LedgerUnderreplicationMa
             zkc.delete(basePath + '/'
                     + ZkLedgerUnderreplicationManager.DISABLE_NODE, -1);
             LOG.info("Resuming automatic ledger re-replication");
+        } catch (KeeperException.NoNodeException ke) {
+            LOG.warn("AutoRecovery is already enabled!", ke);
+            throw new ReplicationException.UnavailableException(
+                    "AutoRecovery is already enabled!", ke);
         } catch (KeeperException ke) {
             LOG.error("Exception while resuming ledger replication", ke);
             throw new ReplicationException.UnavailableException(
-                    "Error contacting zookeeper", ke);
+                    "Exception while resuming auto ledger re-replication", ke);
         } catch (InterruptedException ie) {
             Thread.currentThread().interrupt();
             throw new ReplicationException.UnavailableException(
-                    "Interrupted while connecting zookeeper", ie);
+                    "Interrupted while resuming auto ledger re-replication", ie);
         }
     }
 
